HTML y CSS de detail

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header>
     <section class="secHeader">
         <section class="secLogo">
-            <img src="img/logo.jpg" alt="AllPadel" href="/">
+            <img src="/img/logo.jpg" alt="AllPadel" href="/">
         </section>
         <section class="secMenu">
             <ul class="lista">
