--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -29,7 +29,7 @@
 
                     <article class="carrito-compartir">
                         <form action="/">
-                            <button type="submit" class="boton">Agregar al Carrito</a></button>
+                            <button type="submit" class="boton">Agregar al Carrito</button>
                         </form>
                         <i class="fas fa-share-alt"></i>
                     </article>
