--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -14,32 +14,32 @@
             </section>
 
             <section class="categorias-container">
-                <article class="article-verano">
+                <article>
                     <section class="textbanner">
                         <a class="text-btn">Paletas</a>
                     </section>
-                    <a class="verano" href="#"><img src="/img/paleta.jpg"></a>
+                    <a href="#"><img src="/img/paleta.jpg"></a>
                 </article>
 
-                <article class="article-accesorios">
+                <article>
                     <section class="textbanner">
                         <a class="text-btn">Pelotas</a>
                     </section>
-                    <a class="accesorios" href=""><img src="/img/pelota.jpg"></a>
+                    <a href=""><img src="/img/pelota.jpg"></a>
                 </article>
 
-                <article class="article-hombre">
+                <article>
                     <section class="textbanner">
                         <a class="text-btn">Bolsos</a>
                     </section>
-                    <a class="hombre" href=""><img src="/img/bolso.jpg"></a>
+                    <a href=""><img src="/img/bolso.jpg"></a>
                 </article>
 
-                <article class="article-mujer">
+                <article>
                     <section class="textbanner">
                         <a class="text-btn">Pistas</a>
                     </section>
-                    <a class="hombre" href=""><img src="/img/pista.jpg"></a>
+                    <a href=""><img src="/img/pista.jpg"></a>
                 </article>
             </section>
 
