--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,7 +15,7 @@
 main {
     width: 100%;
     height: auto;
-    background-color: #f3f3f3;
+    background-color: #EDEDED;
 }
 
 .banner-container {
