--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -20,15 +20,12 @@
                         <p>$ 20,000</p>
                         <i class="far fa-heart"></i>
                     </article>
-                    <ul class="datos">
-                        <li>Forma: Redonda</li>
-                        <li>Balance: Bajo</li>
-                        <li>Nucleo: Foam importado recubierto por triple lamina de fibra de carbono</li>
-                        <li>Peso: 370</li>
-                    </ul>
+                    <p class="datos">Forma: Redonda <br> Balance: Bajo <br> Nucleo: Foam importado recubierto por triple lamina de fibra de carbono <br> Peso: 370
+                    </p>
+
 
                     <article class="carrito-compartir">
-                        <form action="/">
+                        <form action="/products/cart">
                             <button type="submit" class="boton">Agregar al Carrito</button>
                         </form>
                         <i class="fas fa-share-alt"></i>
