CRUD completo de producto

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,17 +3,17 @@
         <section class="secListados">
             <h3>Categorias</h3>
             <ul class="listaMenu">
-                <li><a href="">Paletas</a></li>
-                <li><a href="">Pelotas</a></li>
-                <li><a href="">Bolsos</a></li>
-                <li><a href="">Pistas</a></li>
+                <li><a href="/products/lista/1">Paletas</a></li>
+                <li><a href="/products/lista/2">Pelotas</a></li>
+                <li><a href="/products/lista/3">Bolsos</a></li>
+                <li><a href="/products/lista/4">Pistas</a></li>
             </ul>
         </section>
         <section class="secListados">
             <h3>Contacto</h3>
             <ul class="listaMenu">
                 <li><a href="">Ayuda</a></li>
-                <li><a href="">Mi cuenta</a></li>
+                <li><a href="/users/profile">Mi cuenta</a></li>
                 <li><a href="">Comprar</a></li>
             </ul>
         </section>
