--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,16 +5,16 @@
         </section>
         <section class="secMenu">
             <ul class="lista">
-                <li><a href="" class="links">Paletas</a></li>
-                <li><a href="" class="links">Pelotas</a></li>
-                <li><a href="" class="links">Bolsos</a></li>
-                <li><a href="" class="links">Pistas</a></li>
+                <li><a href="/products/lista/1" class="links">Paletas</a></li>
+                <li><a href="/products/lista/2" class="links">Pelotas</a></li>
+                <li><a href="/products/lista/3" class="links">Bolsos</a></li>
+                <li><a href="/products/lista/4" class="links">Pistas</a></li>
                 <li><a href="" class="links">Contacto</a></li>
             </ul>
         </section>
         <section class="secCarrito">
-            <a href="" class="links">Iniciar Sesion</a>
-            <a href="" class="links"><i class="fas fa-shopping-cart"></i></a>
+            <a href="/users/login" class="links">Iniciar Sesion</a>
+            <a href="/products/cart" class="links"><i class="fas fa-shopping-cart"></i></a>
         </section>
     </section>
 </header>
