--- a/src/views/products/create.ejs
+++ b/src/views/products/create.ejs
@@ -10,7 +10,7 @@
     <%- include("../partials/header.ejs") %>
 
         <main>
-            <form action="">
+            <form action="/products/create" method="post">
                 <section class="carga">
                     <section class="informacionProducto">
                         <h3>Nombre</h3>
@@ -38,7 +38,7 @@
                     <section class="cargaImagen">
                         <img src="/img/profiles/default.jpg" alt="">
                         <div class="file-select" id="src-file1">
-                            <input type="file" name="imageProfile" aria-label="Archivo">
+                            <input type="file" name="imagen" aria-label="Archivo">
                         </div>
                     </section>
 
