--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -16,30 +16,30 @@
             <section class="categorias-container">
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn">Paletas</a>
+                        <a class="text-btn" href="/products/lista/1">Paletas</a>
                     </section>
-                    <a href="#"><img src="/img/paleta.jpg"></a>
+                    <a href="/products/lista/1"><img src="/img/paleta.jpg"></a>
                 </article>
 
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn">Pelotas</a>
+                        <a class="text-btn" href="/products/lista/2">Pelotas</a>
                     </section>
-                    <a href=""><img src="/img/pelota.jpg"></a>
+                    <a href="/products/lista/2"><img src="/img/pelota.jpg"></a>
                 </article>
 
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn">Bolsos</a>
+                        <a class="text-btn" href="/products/lista/3">Bolsos</a>
                     </section>
-                    <a href=""><img src="/img/bolso.jpg"></a>
+                    <a href="/products/lista/3"><img src="/img/bolso.jpg"></a>
                 </article>
 
                 <article>
                     <section class="textbanner">
-                        <a class="text-btn">Pistas</a>
+                        <a class="text-btn" href="/products/lista/4">Pistas</a>
                     </section>
-                    <a href=""><img src="/img/pista.jpg"></a>
+                    <a href="/products/lista/4"><img src="/img/pista.jpg"></a>
                 </article>
             </section>
 
