--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -10,7 +10,7 @@
     <%- include("../partials/header.ejs") %>
         <main>
 
-            <form action="">
+            <form action="/users/login" method="post">
                 <section class="login">
 
                     <h1>LOGIN</h1>
