--- a/src/views/products/create.ejs
+++ b/src/views/products/create.ejs
@@ -10,7 +10,7 @@
     <%- include("../partials/header.ejs") %>
 
         <main>
-            <form action="/products/create" method="post">
+            <form enctype="multipart/form-data" action="/products/create" method="post">
                 <section class="carga">
                     <section class="informacionProducto">
                         <h3>Nombre</h3>
