--- a/src/views/products/home_secundario.ejs
+++ b/src/views/products/home_secundario.ejs
@@ -10,21 +10,25 @@
     <%- include("../partials/header.ejs") %>
         <main>
             <section>
-                <h1>CATEGORIA</h1>
-                <% for( let i = 0; i < productos.length; i++ ) { %>
-                    <article>
-                        <a class="a-homesecundario" href="/products/detail/<%= productos[i].id %>">
+
+                <% if (productos.length == 0) { %>
+                    <h1>NO HAY PRODUCTOS</h1>
+                    <% } else {%>
+
+                        <% for( let i = 0; i < productos.length; i++ ) { %>
+                            <article>
+                                <a class="a-homesecundario" href="/products/detail/<%= productos[i].id %>">
                             <img src="<%= productos[i].imagen %>" alt="Producto1">
                         </a>
-                        <div>
-                            <p class="descr"><b><%= productos[i].nombre %></b></p>
-                            <p class="precios">
-                                $
-                                <%= productos[i].precio %>
-                            </p>
-                        </div>
-                    </article>
-                    <% } %>
+                                <div>
+                                    <p class="descr"><b><%= productos[i].nombre %></b></p>
+                                    <p class="precios">
+                                        $
+                                        <%= productos[i].precio %>
+                                    </p>
+                                </div>
+                            </article>
+                            <% }} %>
             </section>
         </main>
         <%- include("../partials/footer.ejs") %>
