--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -12,7 +12,7 @@
 
             <h1>Registro</h1>
 
-            <form action="">
+            <form action="/users/register" method="post">
                 <section class="registro">
                     <section class="izq-campos">
                         <h3>Nombre</h3>
@@ -31,7 +31,7 @@
                     <section class="der-img">
                         <img src="/img/profiles/default.jpg" alt="">
                         <div class="file-select" id="src-file1">
-                            <input type="file" name="imageProfile" aria-label="Archivo">
+                            <input type="file" name="imagen" aria-label="Archivo">
                         </div>
                     </section>
 
