--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,10 +3,10 @@
         <section class="secListados">
             <h3>Categorias</h3>
             <ul class="listaMenu">
-                <li><a href="/products/lista/1">Paletas</a></li>
-                <li><a href="/products/lista/2">Pelotas</a></li>
-                <li><a href="/products/lista/3">Bolsos</a></li>
-                <li><a href="/products/lista/4">Pistas</a></li>
+                <li><a href="">Paletas</a></li>
+                <li><a href="">Marcas</a></li>
+                <li><a href="">Formas</a></li>
+                <li><a href="">Colores</a></li>
             </ul>
         </section>
         <section class="secListados">
@@ -20,10 +20,9 @@
     </section>
     <section class="secDerecho">
         <section class="secAcercaDe">
-            <h3>Acerca de</h3>
+            <h3>Administradores</h3>
             <ul class="listaMenu">
-                <li><a href="">AllPadel</a></li>
-                <li><a href="">Terminos y condiciones</a></li>
+                <li><a href="/products/create">Crear Producto</a></li>
             </ul>
         </section>
         <section class="secRedes">
