--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,10 +5,10 @@
         </section>
         <section class="secMenu">
             <ul class="lista">
-                <li><a href="/products/lista/1" class="links">Paletas</a></li>
-                <li><a href="/products/lista/2" class="links">Pelotas</a></li>
-                <li><a href="/products/lista/3" class="links">Bolsos</a></li>
-                <li><a href="/products/lista/4" class="links">Pistas</a></li>
+                <li><a href="" class="links">Paletas</a></li>
+                <li><a href="" class="links">Marcas</a></li>
+                <li><a href="" class="links">Formas</a></li>
+                <li><a href="" class="links">Colores</a></li>
                 <li><a href="" class="links">Contacto</a></li>
             </ul>
         </section>
