--- a/src/views/products/modify.ejs
+++ b/src/views/products/modify.ejs
@@ -19,15 +19,35 @@
                         <h3>Descripcion</h3>
                         <input type="text" name="descripcion" id="descripcion" class="descr" value="<%= producto.descripcion %>">
 
-                        <h3>Categoria</h3>
-                        <select name="categoria" class="campos" value="<%= producto.categoria %>" required>
+                        <h3>Marca</h3>
+                        <select name="marca" class="campos" value="<%= producto.marca %>">
                 
-                    <option value="1">Paletas</option>
-                    <option value="2">Pelotas</option>
-                    <option value="3">Bolsos</option>
-                    <option value="4">Pistas</option>
+                            <option value="1">Paletas</option>
+                            <option value="2">Pelotas</option>
+                            <option value="3">Bolsos</option>
+                            <option value="4">Pistas</option>
 
-                </select>
+                        </select>
+
+                        <h3>Forma</h3>
+                        <select name="forma" class="campos" value="<%= producto.forma %>">
+                
+                            <option value="1">Paletas</option>
+                            <option value="2">Pelotas</option>
+                            <option value="3">Bolsos</option>
+                            <option value="4">Pistas</option>
+
+                        </select>
+
+                        <h3>Color</h3>
+                        <select name="color" class="campos" value="<%= producto.color %>">
+                
+                            <option value="1">Paletas</option>
+                            <option value="2">Pelotas</option>
+                            <option value="3">Bolsos</option>
+                            <option value="4">Pistas</option>
+
+                        </select>
 
                         <h3>Precio</h3>
                         <input type="text" name="precio" id="precio" class="campos" value="<%= producto.precio %>">
