--- a/src/views/products/create.ejs
+++ b/src/views/products/create.ejs
@@ -19,15 +19,35 @@
                         <h3>Descripcion</h3>
                         <input type="text" name="descripcion" id="descripcion" class="descr">
 
-                        <h3>Categoria</h3>
-                        <select name="categoria" class="campos" required>
+                        <h3>Marca</h3>
+                        <select name="marca" class="campos" required>
                 
-                    <option value="1">Paletas</option>
-                    <option value="2">Pelotas</option>
-                    <option value="3">Bolsos</option>
-                    <option value="4">Pistas</option>
+                            <option value="1">Paletas</option>
+                            <option value="2">Pelotas</option>
+                            <option value="3">Bolsos</option>
+                            <option value="4">Pistas</option>
 
-                </select>
+                        </select>
+
+                        <h3>Forma</h3>
+                        <select name="forma" class="campos" required>
+                
+                            <option value="1">Paletas</option>
+                            <option value="2">Pelotas</option>
+                            <option value="3">Bolsos</option>
+                            <option value="4">Pistas</option>
+
+                        </select>
+
+                        <h3>Color</h3>
+                        <select name="color" class="campos" required>
+                
+                            <option value="1">Paletas</option>
+                            <option value="2">Pelotas</option>
+                            <option value="3">Bolsos</option>
+                            <option value="4">Pistas</option>
+
+                        </select>
 
                         <h3>Precio</h3>
                         <input type="text" name="precio" id="precio" class="campos">
@@ -35,6 +55,7 @@
                         <h3>Stock</h3>
                         <input type="text" name="stock" id="stock" class="campos">
                     </section>
+
                     <section class="cargaImagen">
                         <img src="/img/profiles/default.jpg" alt="">
                         <div class="file-select" id="src-file1">
